# ai-aml-investigation-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260801_0001_init.py
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  logging.py
app/models/: entities.py
app/prompts/: analysis.md  report.md  system.md
app/repositories/: case_repository.py
app/schemas/: case.py
app/services/: aml_analysis_service.py  openai_service.py  report_service.py  transaction_pattern_service.py
app/utils/: time.py
docs/: architecture.md  prompting.md
examples/cases/: README.md  case_cross_border.json  case_dormant_reactivation.json  case_high_frequency_small.json  case_profile_mismatch.json  case_rapid_inout.json  case_structuring.json
examples/reports/: example_report_excerpt.md
scripts/: analyze_demo.py  seed_demo.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_prompt_loading.py  test_schema_validation.py  test_transaction_patterns.py
